# contador

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  Abrir Separador (diagnostico).bat  Abrir Separador.bat  Abrir Separador.pyw  Atualizar programa.bat  CHANGELOG.md  CLAUDE.md  Etiqueta Shopee.bat  Iniciar Bot (auto).bat  Iniciar Bot.bat  Pegar Token Shopee.bat  Pegar Token.bat  README.md  bot_config.example.json  bot_telegram.py  credenciais.json  estado.py  estado_grupos.json  historico.py  link_autorizacao.txt  nomes_sku.json  pegar_token.py  pegar_token_shopee.py  provedores.py  pyproject.toml  registro.py  relatorio.py  requirements-bot.txt  requirements-dev.txt  requirements.txt  ruff.toml  separador_etiquetas_ml.py  separador_gui.py  shopee_api.py  skus_por_anuncio.json
.codex/: hooks.json
ads-monitor/: README.md  coletar.py  recomendar.py  registrar-tarefa.ps1  run-diario.ps1
api-monitor/: README.md  fetch-render.ps1  fetch-render.py  prompt-semanal.md  registrar-tarefa.ps1  run-semanal.ps1
atalhos/: Abrir Separador (diagnostico).bat  Abrir Separador.pyw  Etiqueta Shopee.bat  Iniciar Bot (auto).bat  Iniciar Bot.bat  Pegar Token Shopee.bat  Pegar Token.bat
docs/: AMAZON_SP_API.md  ARQUITETURA.md  AUDITORIA_2026-07-16.md  CHANGELOG.md  PRIORIDADES_TECNICAS.md  index.html
exemplos/: credenciais.example.json  credenciais_shopee.example.json
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json  manifest.json  semantic.json
obsidian/: Bem-vindo.md  Fluxos de operação.md  Glossário.md  Invariantes críticas.md  Mapa do repositório.md  README.md  (+2 more)
(+99 files in other folders)
